Fixed prepare and prepackage

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "gzip": "gzip -kf dist/*.{js,map}",
         "lint": "eslint --ext .ts,.js .",
         "nuke": "rm -rf **/node_modules yarn.lock",
-        "prepare": "npm run build",
-        "prepackage": "npm run build",
+        "prepare": "npm run setup && npm run dist:prod",
+        "prepackage": "npm run setup && npm run dist:prod",
         "prepublishOnly": "yarn dirs && yarn lint && yarn tsc && yarn dist:prod && yarn test",
         "reset": "yarn nuke && yarn",
         "setup": "yarn dirs && yarn lint && yarn tsc && yarn dist:dev",
