--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@tendermint/amino-js",
-    "description": "go-amino + GopherJS + TypeScript",
+    "name": "@pokt-network/amino-js",
+    "description": "A fork of @tendermint/amino-js to include the Pocket Core models for encoding",
     "license": "Apache-2.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/cosmos/amino-js.git"
+        "url": "https://github.com/pokt-network/amino-js.git"
     },
     "publishConfig": {
         "access": "public"
