--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "engines": {
         "node": ">=10"
     },
-    "version": "0.7.4-alpha.1",
+    "version": "0.7.3-alpha.1",
     "main": "index.js",
     "types": "index.d.ts",
     "scripts": {
@@ -31,10 +31,9 @@
         "nuke": "rm -rf **/node_modules yarn.lock",
         "prepare": "npm run setup && npm run dist:prod",
         "prepackage": "npm run setup && npm run dist:prod",
-        "prepublishOnly": "yarn dirs && yarn lint && yarn tsc && yarn dist:prod && yarn test",
+        "prepublishOnly": "yarn dirs && yarn lint && yarn tsc && yarn dist:prod && yarn",
         "reset": "yarn nuke && yarn",
         "setup": "yarn dirs && yarn lint && yarn tsc && yarn dist:dev",
-        "test": "jest --config test/jest.config.json",
         "tsc": "rm -rf types/* && tsc && cp -R lib/*.d.ts types/lib/",
         "watch": "yarn build:dev --watch"
     },
